configured fifth and sixth, fix z-index in cards

--- a/src/_fourth_keyframe.scss
+++ b/src/_fourth_keyframe.scss
@@ -1,7 +1,6 @@
 @keyframes moveFourth {
     
     0% {
-        z-index: 100; 
         bottom: 0px; 
         transform: translate(0px) scale(1);
      
