--- a/src/_one_keyframe.scss
+++ b/src/_one_keyframe.scss
@@ -1,6 +1,6 @@
 @keyframes moveFirst {
     0% {
-       z-index: 100;    
+       z-index: 100;
        bottom: 0px;
        transform: translate(0px) scale(1);
          
@@ -37,7 +37,7 @@
         transform: translate(1090px) scale(1);
     }
     100% {
-     
+        z-index: 100;
         bottom: 0px;
         transform: translate(0px) scale(1);
     }
